--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "mixin-deep": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "set-value": "^3.0.1"
   },
   "scripts": {
